# qwerty

./: README.md  pyproject.toml
data/: report.csv
lab01/: README.md
lab01/src/: 02_sum_avg.py  04_minutes_to_hhmm.py  05_initials_and_len.py
lab02/: README.md
lab02/src/: col_sums.py  flatten.py  row_sums.py  transpose.py  tuples.py  unique_sorted.py
lab03/src/: text.py
lab04/: README.md
lab04/src/: io_txt_csv.py
lab05/: README.md
lab05/src/: cvs_xlsx.py  json_csv.py
lab06/: README.md
lab06/data/samples/: text.txt
lab06/src/: cli_convert.py  cli_text.py
lab07/: README.md
lab08/: README.md
lab08/data/: students.json
lab08/src/: main.py  models.py
lab10/: README.md  structures.py
lib/: convertor.py  text.py
src/data/lab04/: io_txt_csv.py  text_report.py
src/lab01/: 02_sum_avg.py  03_discount_vat.py  05_initials_and_len.py
src/lab01/src/: 02_sum_avg.py  03_discount_vat.py
src/lab02/: README.md  col_sums.py  min_max.py  row_sums.py  transpose.py  tuples.py
src/lab02/src/: min_max.py
src/lab03/: README.md  text_stats.py
src/lab03/src/: text_stats.py
src/lab04/src/: io_txt_csv.py  text_report.py
src/lab05/data/samples/: people.json
src/lab05/src/: json_csv.py
src/lab06/: README.md
src/lab07/: README.md
src/lab07/tests/: test_text.py  tests_json-csv.py
src/lab08/: README.md  main.py  models.py  serialize.py
src/lab09/: README.md  examples.py  group.py  test_group.py
src/lab09/data/: students.csv
src/lab10/: linked_list.py  test.py
