[project]
name = "qwerty"
version = "0.1.0"
description = "Проект с лабораторными работами по програмированию и алгоритмизации"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
]

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(
  ^\.(venv|env)/|
  ^data/|
  ^images/|
  ^__pycache__/|
  ^.pytest_cache/
)
'''
